tests/ui/dyn-star/error.stderr
error[E0277]: the trait bound `{integer}: Foo` is not satisfied
  --> $DIR/error.rs:10:27
   |
LL |     let dyn_i: dyn* Foo = i;
   |                           ^ the trait `Foo` is not implemented for `{integer}`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/error.rs:6:1
   |
LL | trait Foo {}
   | ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
